# Monkey-Typer

./: CMakeLists.txt  README.md
assets/: words_English.txt
include/: CustomDifficultyScene.h  CustomSettings.h  DifficultyScene.h  EndScene.h  Game.h  Star.h  StarField.h  TypingSpeedTracker.h  Utils.h  WindowManager.h  Word.h  WordManager.h
src/: CustomDifficultyScene.cpp  CustomSettings.cpp  DifficultyScene.cpp  EndScene.cpp  Game.cpp  Star.cpp  StarField.cpp  TypingSpeedTracker.cpp  Utils.cpp  WindowManager.cpp  Word.cpp  WordManager.cpp  main.cpp
